<resources>
    <string name="app_name">Punayog</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="skip">SKIP</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="new_member_register_now">Do not have an account? Register Now!</string>
    <string name="use_other_methods">Use Other Methods</string>
    <string name="tc">I agree with all the <u>Terms and Conditions.</u></string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="OPTMessage">6 digit OTP has been sent to the provided email address.</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="explore" translatable="false">EXPLORE</string>

    <string name="title_activity_hamburger">HamburgerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="all_products"><u>All Products</u></string>

    <string name="reset_password">Reset Password</string>

    <string name="post_your_ad"><u>POST YOUR AD!</u></string>

    <string name="registerAccount"><u>CREATE AN ACCOUNT!</u></string>
    <string name="login_to_punayog"><u>LOGIN TO PUNAYOG!</u></string>

    //Spinner
    <string name="Categories_prompt">Choose the Category</string>
    <string-array name="Categories_arrays">
        <item>Choose the Category</item>
        <item>Accessories</item>
        <item>Apparels</item>
        <item>Books</item>
        <item>Electronics</item>
    </string-array>

    <string name="subCategories_prompt">Choose the Sub-Category</string>
    <string-array name="subCategories_arrays">
        <item>Choose the Sub-Category</item>
        <item>Accessories</item>
        <item>Apparels</item>
        <item>Books</item>
        <item>Electronics</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_1_shipping_address"><u>1. Shipping Address: </u></string>
    <string name="_2_billing_address"><u>2. Billing Address: </u></string>
    <string name="_3_total_amount"><u>3. Total Amount: </u></string>
    <string name="_4_your_ordered_products"><u>4. Your Ordered Products:</u></string>
    <string name="_5_choose_payment_method"><u>5. Choose payment method:</u></string>
    <string name="_4_ordered_products"><u>4. Ordered Products</u></string>
    <string name="order_status"><u>5. Order Status</u></string>


</resources>
