<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".VerificationActivity"
    android:layout_gravity="center"
    android:background="@color/login_bk_color"
    android:focusableInTouchMode="true"
    android:gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:orientation="vertical"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="5dp"
                    android:src="@drawable/logo" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical" />


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                app:cardBackgroundColor="@color/login_bk_color"
                app:cardCornerRadius="10dp">


            </androidx.cardview.widget.CardView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textOTP"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">

                <TextView
                    android:id="@+id/textViewOTP"
                    style="@style/modifiedEditText"
                    android:backgroundTint="@color/colorPrimary"
                    android:hint="@string/verify_otp"
                    android:maxLines="1"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:textSize="25sp"/>

                <TextView
                    android:id="@+id/textViewMessage"
                    style="@style/modifiedEditText"
                    android:backgroundTint="@color/colorPrimary"
                    android:hint="@string/OPTMessage"
                    android:maxLines="1"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:layout_marginTop="15sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputOTP"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">

                <EditText
                    android:id="@+id/editTextOTP"
                    style="@style/modifiedEditText"
                    android:backgroundTint="@color/colorPrimary"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/nextButton"
                style="@style/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:onClick="onNextClick"
                android:text="@string/next"
                android:textSize="20sp"
                tools:ignore="OnClick" />

            <TextView
                style="@style/parent"
                android:layout_marginTop="20dp"
                android:onClick="onBackClick"
                android:text="@string/back"
                android:textAlignment="textEnd"
                android:textColor="@color/primaryTextColor"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>


    </ScrollView>
    <View
        android:layout_width="11dp"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_side_bg"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="30dp"
        android:onClick="onBackClick"
        android:src="@drawable/ic_back_img" />


</RelativeLayout>
